--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="app.css" type="text/css">
   </head>
   <body>
+  	<div id="root"></div>
     <script src="/app.js"></script>
   </body>
 </html>
